# recallops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  START_CODING_PROMPT.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_resolution_trace_ids.py  0003_expand_incident_ids.py
backend/src/recallops/: __init__.py  config.py  db.py  errors.py  logging.py  main.py
backend/src/recallops/api/: demo.py  evidence.py  health.py  incidents.py
backend/src/recallops/domain/: __init__.py  enums.py  models.py  schemas.py
backend/tests/: __init__.py
backend/tests/api/: test_demo_api.py  test_error_contract.py  test_evidence_api.py  test_health.py  test_incidents_api.py  test_recall_api.py  test_resolution_api.py  test_security.py  test_spa.py
backend/tests/contract/: test_memory_contract.py
backend/tests/integration/: test_cognee_live.py  test_live_judge_flow.py
backend/tests/unit/: test_audit_log.py  test_cognee_cloud_adapter.py  test_config.py  test_contract_probe.py  test_credit_guard.py  test_database.py  test_demo_service.py  test_domain.py  test_evidence_service.py  test_forget_lifecycle.py  test_incident_service.py  test_recall_normalize.py  test_recall_service.py  test_redaction.py  test_resolution_lifecycle.py
demo/: demo-script.md
demo/fixtures/: checkout-runbook-v3.md  cloudflare-december-5-change.json  cloudflare-december-5-postmortem.md  cloudflare-december-5-timeline.json  cloudflare-november-18-postmortem.md  code-orange-fail-small-guidance.md  deploy-418.json  expected-retrieval.json  incident-2048-timeline.json  payment-gateway-baseline.md  postmortem-inc-1842.md  stale-cache-reset-rule.md  unsafe-global-killswitch-assumption.md
docs/: architecture.md  cognee-lifecycle.md  submission-checklist.md
docs/superpowers/plans/: 2026-06-28-recallops-implementation-plan.md
docs/superpowers/specs/: 2026-06-28-recallops-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: degraded-flow.spec.ts  judge-flow.spec.ts  landing-layout.spec.ts
frontend/src/: main.tsx  router.tsx  styles.css
frontend/src/api/: client.ts  recallops.ts
frontend/src/app/: AppShell.test.tsx  AppShell.tsx  CommandDeck.tsx  DeferredRoute.tsx  MotionProvider.tsx  PageTransition.test.tsx  PageTransition.tsx
frontend/src/components/: EmptyState.tsx  ErrorBoundary.tsx  OperationBanner.tsx  RoutePlaceholder.tsx  StatusBadge.tsx
frontend/src/styles/: foundation.css  legacy.css  motion.css  responsive.css  routes-home.css  routes-workspace.css  shell.css  visualization.css
frontend/src/test/: Accessibility.test.tsx
outputs/: RECALLOPS_PLANNING_HANDOFF.md
scripts/: __init__.py  cognee_contract_probe.py  evaluate_retrieval.py  preflight.py
(+50 files in other folders)
