[project]
name = "recallops"
version = "0.1.0"
description = "Auditable self-improving incident memory powered by Cognee"
requires-python = ">=3.13,<3.14"
dependencies = [
  "aiosqlite>=0.20,<1",
  "alembic>=1.14,<2",
  "cognee==1.2.2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0.36,<3",
  "structlog>=25.1,<26",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "httpx2>=2,<3",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
pythonpath = ["backend/src"]
testpaths = ["backend/tests"]
markers = [
  "integration: requires explicitly enabled external services",
]

[tool.ruff]
line-length = 100
src = ["backend/src"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["recallops"]
mypy_path = "backend/src"
